# home

./: .codeowners  .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  pyproject.toml  sitemap.xml
.foam/templates/: Zettel.md  blogpost.md  daily-note.md
.github/: CODEOWNERS
.github/workflows/: deploy.yml
CV/: index.html
Zettel/: index.html
Zettel/Philosophy/Religion/atheism-kojeve-introduction/: index.html
Zettel/Philosophy/of Language/myths-barthes-bouvard-and-pecuchet/: index.html
Zettel/Philosophy/of Religion/atheism-kojeve-introduction/: index.html
blog/: index.html
blog/2025/03/22/starting-a-new-blog/: index.html
blog/2025/06/29/open-topics/: index.html
blog/2025/09/27/writing-ideas/: index.html
blog/2025/09/28/picking-up-gr-again/: index.html
blog/2025/09/28/thoughts-on-data-pipelines/: index.html
blog/2025/10/03/thoughts-on-data-pipelines/: index.html
blog/archive/2025/: index.html
blog/drafts/principle_xcluded_middle/: index.html
blog/internal/27.9.25/: index.html
blog/internal/29.06.25/: index.html
qndes-homepage/: mkdocs.yml
qndes-homepage/docs/: .authors.yml  CV.md  index.md
qndes-homepage/docs/Zettel/: index.md
qndes-homepage/docs/blog/: index.md
qndes-homepage/docs/blog/posts/: 22.03.25.md  26.12.25.md  28.09.25.md  3.10.25.md
qndes-homepage/docs/drafts/: principle_xcluded_middle.md
qndes-homepage/drafts/: Blog template.md  principle_xcluded_middle.md
styles/: extra.css
(+5 files in other folders)
