[project]
name = "qndes-homepage"
version = "0.1.0"
description = "my homepage"
authors = [
    {name = "Andreas Volkhardt",email = "avolkha1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.9,<10.0.0)",
    "mkdocs-landing (>=0.0.8,<0.0.9)",
    "mkdocs-simple-blog (>=0.2.0,<0.3.0)",
    "mkdocs-blogging-plugin (>=2.2.11,<3.0.0)",
    "mkdocs-macros-plugin (>=1.3.7,<2.0.0)",
    "mkdocs-rss-plugin>=1.17.3",
]

[tool.uv]
python-preference = "only-managed"

